--- a/app-ols-integration/main/default/classes/OLSBounceReportJob.cls
+++ b/app-ols-integration/main/default/classes/OLSBounceReportJob.cls
@@ -1,13 +1,13 @@
 /**
- * @name OLSBounceReportSchedulable
+ * @name OLSBounceReportJob
  * @description this emails the bounce report of any Online Store Customer (contact) record and then sets the email bounced flag
  * as well as the bounce reported. Uses batchable for scaling.
  * 
  * @author Creed Interactive (Andrew Frederick) October 2021
  */
-public class OLSBounceReportSchedulable implements Schedulable {
+public class OLSBounceReportJob implements Schedulable {
     
     public void execute( System.SchedulableContext context ){
-        Database.executeBatch( new OLSBounceReportBatchable() );
+        Database.executeBatch( new OLSBounceReportBatch() );
     }
 }
